samples/_failures_safe/1761209548_cdfdb6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbeac2ce.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_cbeac2ce.c:160:9: error: expected declaration or statement at end of input
  160 |         case TOKEN_EOF: printf("EOF"); break;
      |         ^~~~
./samples/SAFE/__tmp_cbeac2ce.c:160:9: error: expected declaration or statement at end of input
